--- a/results-summary-component-main/styles/master.css
+++ b/results-summary-component-main/styles/master.css
@@ -42,9 +42,149 @@ body {
 main {
     width: 50vw;
     display: flex;
-    border: 1px solid red;
 }
 
 main > div {
     flex-basis: 50%;
+}
+
+main .result {
+    border-radius: 25px;
+    background: linear-gradient(to bottom, var(--light-slate-blue) 20%, var(--light-royal-blue));
+    color: var(--pale-blue);
+    padding: 2rem 2.5rem;
+    max-width: 375px;
+}
+
+main .result h4 {
+    color: var(--light-lavender);
+    text-align: center;
+    font-size: 1.25rem;
+    margin-top: 0;
+}
+
+main .result .score-overall {
+    color: var(--light-lavender);
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    width: fit-content;
+    border-radius: 50%;
+    padding: 2rem 3rem;
+    background: linear-gradient(to bottom, var(--violet-blue) 30%, var(--persian-blue));
+}
+
+/* main .result .score-overall::before {
+    content: "";
+    display: inline-block;
+    border-radius: 50%;
+    background: linear-gradient(to bottom, var(--violet-blue) 80%, var(--persian-blue));
+    width: 100px;
+    height: 100px;
+} */
+
+main .result .score-overall .user-grade {
+    color: var(--white);
+    font-size: 3rem;
+    font-weight: bold;
+    display: block;
+}
+
+.results-status {
+    color: var(--white);
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-align: center;
+}
+
+.results-comment {
+    text-align: center;
+    color: var(--light-lavender);
+}
+
+main .result-summary {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
+    border-radius: 0 25px 25px 0;
+    padding: 2rem 2.5rem;
+}
+
+main .result-summary h4 {
+    color: var(--dark-gray-blue);
+    font-size: 1.25rem;
+    margin-top: 0;
+}
+
+main .result-summary div[class*='component'] {
+    flex-grow: 2;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 15px;
+    margin-bottom: 1rem;
+    padding: 0 1rem;
+    font-size: 1rem;
+}
+
+main .result-summary div[class*='component']:last-of-type {
+    margin-bottom: 2rem;
+}
+
+main .result-summary div.reaction {
+    background-color: hsla(0, 100%, 67%, 0.1);
+}
+
+main .result-summary div > p {
+    flex: 2;
+    text-align: left;
+    margin: 15px 0;
+}
+
+main .result-summary div[class*='reaction'] .component-text {
+    color: var(--light-red);
+}
+
+main .result-summary div.memory {
+    background-color: hsla(39, 100%, 56%, 0.1);
+}
+
+main .result-summary div[class*='memory'] .component-text {
+    color: var(--orangey-yellow);
+}
+
+main .result-summary div.verbal {
+    background-color: hsla(234, 85%, 45%, 0.1);
+}
+
+main .result-summary div[class*='verbal'] .component-text {
+    color: var(--cobalt-blue);
+}
+
+main .result-summary div.visual {
+    background-color: hsla(166, 100%, 37%, 0.1);
+}
+
+main .result-summary div[class*='visual'] .component-text {
+    color: var(--green-teal);
+}
+
+main .result-summary div[class*='component'] .component-grade {
+    color: hsla(224, 30%, 27%, 0.5);
+    font-weight: 700;
+}
+
+main .result-summary div[class*='component'] .component-grade strong {
+    color: var(--dark-gray-blue);
+}
+
+main .result-summary button {
+    background: var(--dark-gray-blue);
+    color: var(--white);
+    font-family: inherit;
+    border: unset;
+    font-size: inherit;
+    padding: 1rem 0;
+    border-radius: 30px;
+    margin: 1rem 0;
 }
