--- a/results-summary-component-main/styles/master.css
+++ b/results-summary-component-main/styles/master.css
@@ -40,7 +40,7 @@ body {
 }
 
 main {
-    width: 50vw;
+    max-width: 750px;
     display: flex;
 }
 
@@ -49,11 +49,10 @@ main > div {
 }
 
 main .result {
-    border-radius: 25px;
+    border-radius: 35px;
     background: linear-gradient(to bottom, var(--light-slate-blue) 20%, var(--light-royal-blue));
     color: var(--pale-blue);
     padding: 2rem 2.5rem;
-    max-width: 375px;
 }
 
 main .result h4 {
@@ -70,7 +69,7 @@ main .result .score-overall {
     margin: 0 auto;
     width: fit-content;
     border-radius: 50%;
-    padding: 2rem 3rem;
+    padding: 2.5rem 3.5rem;
     background: linear-gradient(to bottom, var(--violet-blue) 30%, var(--persian-blue));
 }
 
@@ -85,14 +84,14 @@ main .result .score-overall {
 
 main .result .score-overall .user-grade {
     color: var(--white);
-    font-size: 3rem;
+    font-size: 4rem;
     font-weight: bold;
     display: block;
 }
 
 .results-status {
     color: var(--white);
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     font-weight: 700;
     text-align: center;
 }
@@ -100,14 +99,16 @@ main .result .score-overall .user-grade {
 .results-comment {
     text-align: center;
     color: var(--light-lavender);
+    width: 90%;
+    margin: 0 auto;
 }
 
 main .result-summary {
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
-    border-radius: 0 25px 25px 0;
+    border-radius: 0 35px 35px 0;
     padding: 2rem 2.5rem;
+    box-shadow: 5px 5px 20px var(--pale-blue);
 }
 
 main .result-summary h4 {
@@ -132,13 +133,13 @@ main .result-summary div[class*='component']:last-of-type {
 }
 
 main .result-summary div.reaction {
-    background-color: hsla(0, 100%, 67%, 0.1);
+    background-color: hsla(0, 100%, 67%, 0.05);
 }
 
 main .result-summary div > p {
     flex: 2;
     text-align: left;
-    margin: 15px 0;
+    padding-left: 1rem;
 }
 
 main .result-summary div[class*='reaction'] .component-text {
@@ -146,7 +147,7 @@ main .result-summary div[class*='reaction'] .component-text {
 }
 
 main .result-summary div.memory {
-    background-color: hsla(39, 100%, 56%, 0.1);
+    background-color: hsla(39, 100%, 56%, 0.05);
 }
 
 main .result-summary div[class*='memory'] .component-text {
@@ -154,7 +155,7 @@ main .result-summary div[class*='memory'] .component-text {
 }
 
 main .result-summary div.verbal {
-    background-color: hsla(234, 85%, 45%, 0.1);
+    background-color: hsla(234, 85%, 45%, 0.05);
 }
 
 main .result-summary div[class*='verbal'] .component-text {
@@ -162,7 +163,7 @@ main .result-summary div[class*='verbal'] .component-text {
 }
 
 main .result-summary div.visual {
-    background-color: hsla(166, 100%, 37%, 0.1);
+    background-color: hsla(166, 100%, 37%, 0.05);
 }
 
 main .result-summary div[class*='visual'] .component-text {
@@ -186,5 +187,70 @@ main .result-summary button {
     font-size: inherit;
     padding: 1rem 0;
     border-radius: 30px;
-    margin: 1rem 0;
+    margin: 0.75rem 0;
+}
+
+main .result-summary button:hover {
+    cursor: pointer;
+    background: linear-gradient(to bottom, var(--light-slate-blue) 20%, var(--light-royal-blue));
+}
+
+@media (max-width: 375px) {
+    body {
+        display: initial;
+    }
+
+    main {
+        flex-direction: column;
+    }
+
+    main .result {
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        padding-top: 1rem;
+    }
+
+    main .result h4,
+    main .result-summary h4 {
+        font-size: 1rem;
+    }
+
+    main .result .score-overall {
+        padding: 1rem 2rem;
+    }
+
+    main .result .score-overall .user-grade {
+        font-size: 2.5rem;
+    }
+
+    .results-status {
+        font-size: 1.25rem;
+        margin-bottom: 15px;
+    }
+
+    .results-comment {
+        width: initial;
+        font-size: 0.9rem;
+    }
+
+    main .result-summary {
+        padding: 1rem 1.5rem;
+    }
+
+    main .result-summary button {
+        margin: 0;
+        padding: 15px 0;
+    }
+
+    .component-text {
+        font-size: 0.9rem;
+    }
+
+    main .result-summary div[class*="component"]:last-of-type {
+        margin-bottom: 1rem;
+    }
+
+    .component p {
+        margin: 15px 0;
+    }
 }
