--- a/results-summary-component-main/styles/master.css
+++ b/results-summary-component-main/styles/master.css
@@ -109,6 +109,20 @@ main .result-summary {
     border-radius: 0 35px 35px 0;
     padding: 2rem 2.5rem;
     box-shadow: 5px 5px 20px var(--pale-blue);
+    position: relative;
+}
+
+main .result-summary::before {
+    content: "";
+    display: inline-block;
+    background: white;
+    width: 50px;
+    height: 545px;
+    position: absolute;
+    top: 0;
+    left: -50px;
+    z-index: -1;
+    box-shadow: 0px 5px 50px var(--pale-blue);
 }
 
 main .result-summary h4 {
