--- a/results-summary-component-main/styles/master.css
+++ b/results-summary-component-main/styles/master.css
@@ -44,8 +44,12 @@ main {
     display: flex;
 }
 
-main > div {
-    flex-basis: 50%;
+main > div:first-child {
+    flex-basis: 49%;
+}
+
+main > div:last-child {
+    flex-basis: 51%;
 }
 
 main .result {
@@ -55,11 +59,19 @@ main .result {
     padding: 2rem 2.5rem;
 }
 
+main .result h4,
+main .result-summary h4 {
+    font-size: 1.25rem;
+    margin-top: 0;
+}
+
 main .result h4 {
     color: var(--light-lavender);
     text-align: center;
-    font-size: 1.25rem;
-    margin-top: 0;
+}
+
+main .result-summary h4 {
+    color: var(--dark-gray-blue);
 }
 
 main .result .score-overall {
@@ -72,15 +84,6 @@ main .result .score-overall {
     padding: 2.5rem 3.5rem;
     background: linear-gradient(to bottom, var(--violet-blue) 30%, var(--persian-blue));
 }
-
-/* main .result .score-overall::before {
-    content: "";
-    display: inline-block;
-    border-radius: 50%;
-    background: linear-gradient(to bottom, var(--violet-blue) 80%, var(--persian-blue));
-    width: 100px;
-    height: 100px;
-} */
 
 main .result .score-overall .user-grade {
     color: var(--white);
@@ -107,28 +110,11 @@ main .result-summary {
     display: flex;
     flex-direction: column;
     border-radius: 0 35px 35px 0;
-    padding: 2rem 2.5rem;
-    box-shadow: 5px 5px 20px var(--pale-blue);
+    padding: 2rem 2rem 2rem 3rem;
+    box-shadow: 10px 10px 10px var(--pale-blue), 0px 0px 5px var(--pale-blue);
     position: relative;
-}
-
-main .result-summary::before {
-    content: "";
-    display: inline-block;
-    background: white;
-    width: 50px;
-    height: 545px;
-    position: absolute;
-    top: 0;
-    left: -50px;
     z-index: -1;
-    box-shadow: 0px 5px 50px var(--pale-blue);
-}
-
-main .result-summary h4 {
-    color: var(--dark-gray-blue);
-    font-size: 1.25rem;
-    margin-top: 0;
+    left: -25px;
 }
 
 main .result-summary div[class*='component'] {
@@ -218,6 +204,10 @@ main .result-summary button:hover {
         flex-direction: column;
     }
 
+    main > div {
+        flex-basis: 50%;
+    }
+
     main .result {
         border-top-left-radius: 0px;
         border-top-right-radius: 0px;
@@ -248,7 +238,10 @@ main .result-summary button:hover {
     }
 
     main .result-summary {
-        padding: 1rem 1.5rem;
+        padding: 2rem 1.5rem 2.5rem 1.5rem;
+        position: static;
+        z-index: initial;
+        left: 0;
     }
 
     main .result-summary button {
